--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "startExternal": "ng serve --host 0.0.0.0 --ssl --ssl-key localhost.key --ssl-cert localhost.crt",
+    "startExternalOffline": "ng serve --configuration=production --host 0.0.0.0",
     "build": "ng build --configuration production --base-href \"/some-numbers/\" ",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -29,6 +30,7 @@
     "@angular/material": "^20.2.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@angular/service-worker": "^20.1.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
