adding version checker

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -26,5 +26,18 @@
         ]
       }
     }
+  ],
+  "dataGroups": [
+    {
+      "name": "app-version",
+      "urls": [
+        "/version.json"
+      ],
+      "cacheConfig": {
+        "maxSize": 0,
+        "maxAge": "0u",
+        "strategy": "freshness"
+      }
+    }
   ]
 }
