--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "startExternal": "ng serve --host 0.0.0.0 --ssl --ssl-key localhost.key --ssl-cert localhost.crt",
     "startExternalOffline": "ng serve --configuration=production --host 0.0.0.0",
-    "build": "ng build --configuration production --base-href \"/some-numbers/\" ",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
