adding forbidden words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,12 @@
     "doubletap",
     "Dtos",
     "Somebers"
+  ],
+  "cSpell.flagWords": [
+    "sombers: somebers",
+    "somerbers: somebers",
+    "sombers.com: somebers.com",
+    "somerbers.com: somebers.com",
+
   ]
 }
