difficulty estimation: v1 of difficulty estimate / completion time estimate

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,17 @@
 {
   "cSpell.words": [
+    "devmode",
     "doubletap",
     "Dtos",
-    "Somebers"
+    "Evals",
+    "gameboard",
+    "idxs",
+    "indexeddb",
+    "rmse",
+    "Somebers",
+    "Stds",
+    "unstarted",
+    "yhat"
   ],
   "cSpell.flagWords": [
     "sombers: somebers",
