--- a/development-tools/tsconfig.json
+++ b/development-tools/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "../tsconfig.node.json",
+  "compilerOptions": {
+    "module": "CommonJS"
+  },
   "include": [
     "./**/*.ts"
   ]
 }
-
