--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@angular/platform-browser": "^20.2.4",
     "@angular/router": "^20.2.4",
     "@angular/service-worker": "^20.2.4",
+    "@fontsource/roboto": "^5.2.7",
     "idb": "^8.0.3",
+    "material-icons": "^1.13.14",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
