refactor: moving developer tools to new path

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,7 +8,7 @@
     "outDir": "./out-tsc/node",
   },
   "include": [
-    "src/app/development-tools/**/*.ts"
+    "development-tools/**/*.ts"
   ],
   "exclude": [
     "src/**/*.spec.ts"
