--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "startExternalOffline": "ng serve --configuration=production --host 0.0.0.0",
     "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "testNoWatch": "ng test --watch=false"
   },
   "prettier": {
     "overrides": [
